<resources>
    <string name="app_name">Devoir1</string>
    <string name="DB_NAME">appdb</string>
    <string name="DB_VERSION">1</string>
    <string name="TASK_TABLE_NAME">Task</string>
    <string name="TASK_ID_COL">id</string>
    <string name="TASK_TITLE_COL">title</string>
    <string name="TASK_DESCRIPTION_COL">description</string>
    <string name="TASK_CATEGORY_COL">category</string>
    <string name="TASK_DATE_COL">date</string>
    <string name="TASK_PRIORITY_COL">priority</string>
    <string name="id">Id: </string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="priority">Priority</string>
    <string name="add">Add new task</string>
    <string name="showAll">Show all task</string>
    <string name="search">Search task</string>
    <string name="pickDate">Pick a date</string>
    <string name="ok">Ok</string>
    <string name="plus">+</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Are you sure you want to delete this task?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="noTask">No Task Found</string>
    <string-array name="priority_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

</resources>
