<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="30dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/title"/>
        <EditText
            android:id="@+id/add_task_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/desc"/>
        <EditText
            android:id="@+id/add_task_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="@string/category"/>
        <EditText
            android:id="@+id/add_task_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/date"/>

        <EditText
            android:id="@+id/add_task_date"
            android:textIsSelectable="false"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:calendarTextColor="@color/white" />
        <Button
            android:id="@+id/add_pickDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/pickDate"
            android:onClick="pickDate"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/priority"/>
        <Spinner
            android:id="@+id/add_task_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:layout_margin="50dp"
        android:textColor="@color/white"
        android:text="@string/add"
        android:onClick="addNewTask"/>





</LinearLayout>