<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:orientation="vertical"
android:layout_margin="10dp"
android:layout_width="match_parent"
android:layout_height="match_parent">

    <Button
        android:id="@+id/btnUpdateTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:onClick="updateTask"
        android:text="@string/update"/>
    <Button
        android:id="@+id/btnCancelUpdateTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btnUpdateTask"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:onClick="cancelUpdateTask"
        android:text="@string/cancel"/>
    <Button
        android:id="@+id/btnDeleteTask"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/trash_can"
        android:onClick="deleteTask"
        android:textSize="30dp"
        />


<LinearLayout
    android:id="@+id/linearLayout2"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="23dp"
        android:textColor="@color/black"
        android:text="@string/title"/>

    <EditText
        android:id="@+id/task_edit_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingTop="10dp"
        android:textSize="18dp"
        android:textColor="@color/black"/>

</LinearLayout>

<LinearLayout
    android:id="@+id/linearLayout3"
    app:layout_constraintTop_toBottomOf="@id/linearLayout2"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="23dp"
        android:textColor="@color/black"
        android:text="@string/desc"/>

    <EditText
        android:id="@+id/task_edit_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:textSize="18dp"
        android:maxLines="2"
        android:textColor="@color/black"
        />

</LinearLayout>
<LinearLayout
    android:id="@+id/linearLayout4"
    app:layout_constraintTop_toBottomOf="@id/linearLayout3"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="23dp"
        android:textColor="@color/black"
        android:text="@string/category"/>
    <EditText
        android:id="@+id/task_edit_category"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingTop="10dp"
        android:textSize="18dp"
        android:textColor="@color/black"/>

</LinearLayout>

<LinearLayout
    android:id="@+id/linearLayout5"
    app:layout_constraintTop_toBottomOf="@id/linearLayout4"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="23dp"
        android:textColor="@color/black"
        android:text="@string/date"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/task_edit_date"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:paddingTop="10dp"
            android:textSize="18dp"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/edit_pickDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/pickDate"
            android:onClick="pickDate"
            />

    </LinearLayout>


</LinearLayout>

<LinearLayout
    android:id="@+id/linearLayout6"
    app:layout_constraintTop_toBottomOf="@id/linearLayout5"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="23dp"
        android:textColor="@color/black"
        android:text="@string/priority"/>
    <Spinner
        android:id="@+id/task_edit_priority"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingTop="10dp"
        android:textAlignment="center"
        android:textSize="18dp"
        android:textColor="@color/black"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        />

</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>