<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnEditTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:text="@string/edit"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="23dp"
            android:textColor="@color/black"
            android:text="@string/title"/>

        <TextView
            android:id="@+id/task_detail_title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingTop="25dp"
            android:textSize="18dp"

            android:textColor="@color/black"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="23dp"
            android:textColor="@color/black"
            android:text="@string/desc"/>

        <TextView
            android:id="@+id/task_detail_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:textSize="18dp"
            android:maxLines="2"
            android:textColor="@color/black"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@id/linearLayout3"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="23dp"
            android:textColor="@color/black"
            android:text="@string/category"/>
        <TextView
            android:id="@+id/task_detail_category"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingTop="25dp"
            android:textSize="18dp"
            android:textColor="@color/black"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        app:layout_constraintTop_toBottomOf="@id/linearLayout4"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="23dp"
            android:textColor="@color/black"
            android:text="@string/date"/>
        <TextView
            android:id="@+id/task_detail_date"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingTop="25dp"
            android:textSize="18dp"
            android:textColor="@color/black"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        app:layout_constraintTop_toBottomOf="@id/linearLayout5"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="23dp"
            android:textColor="@color/black"
            android:text="@string/priority"/>
        <TextView
            android:id="@+id/task_detail_priority"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingTop="25dp"
            android:textSize="18dp"
            android:textColor="@color/black"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>